# my-soc-ops-python-test

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
app/: data.py  game_logic.py  game_service.py  main.py  tech_life_data.py
app/static/css/: app.css
app/templates/: team_game.html  team_home.html
app/templates/components/: bingo_board.html  bingo_modal.html  game_screen.html  start_screen.html  team_bingo_board.html  team_bingo_modal.html  team_game_screen.html  team_start_screen.html
tests/: test_api.py  test_game_logic.py  test_tech_life.py
